# qr-code-scanner

./: .gitignore  DEPLOYMENT.md  Dockerfile  FREE_DEPLOYMENT.md  FREE_DEPLOYMENT_CONFIRMATION.md  GEMINI_GUIDE.md  INTEGRATION_GUIDE.md  LAMATIC_FLOW_EXAMPLES.md  LAMATIC_INTEGRATION.md  LAMATIC_QUICK_REF.md  QUICK_DEPLOY.md  README.md  URL_SCANNING.md  URL_SCANNING_SUMMARY.md  api_server.py  build.sh  docker-compose.yml  examples.py  examples_url_scanning.py  gemini_integration.py  pyproject.toml  qr_client.py  render.yaml  requirements-cloud.txt  requirements.txt  start.sh
src/: qr_scanner_util.py  server.py
tests/: test_scanner.py
